Make the hero font smaller to prevent wrapping
The event name looked all janky when it wrapped.

--- a/assets/css/style-green.css
+++ b/assets/css/style-green.css
@@ -767,7 +767,7 @@ label.error { display: block; }
   .nav-tabs-default .tab-pane .nav-tabs > li > a { padding-left: 20px; padding-right: 20px; }
   .nav-tabs-default .tab-pane .nav-tabs.nav-justified > li > a { padding-left: 5px; padding-right: 5px; }
 
-  #hero .hero-big { font-size: 130px; }
+  #hero .hero-big { font-size: 90px; }
   .navigation-bar-header .navigation-bar > li a { padding-left: 5px; padding-right: 5px; font-size: 16px; }
 }
 
